--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <main>
     <h1>Let's have some fun</h1>
-    <button type="button" class="btn btn-primary" onclick="myfunk()">Click Me</button>
+    <button id="buttonhere" type="button" class="btn btn-primary" onclick="myfunk()">Click Me</button>
 
-    <button type="button" class="btn btn-primary" onclick="popup()">Hobbies</button>
+    <button  type="button" class="btn btn-primary" onclick="popup()">Hobbies</button>
 
-
+  <p id="enterhere"></p>
   </main>
 
 
