--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <main>
     <h1>Let's have some fun</h1>
-    <button id="buttonhere" type="button" class="btn btn-primary" onclick="myfunk()">Click Me</button>
+    <button id="buttoHere" type="button" class="btn btn-primary" onclick="myfunk()">Click Me</button>
 
     <button  type="button" class="btn btn-primary" onclick="popup()">Hobbies</button>
 
