--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 
-  <main>
-    <h1>Let's have some fun</h1>
-    <button type="button" class="btn btn-primary" onclick="myfunk()">Click Me</button>
-
-    <button type="button" class="btn btn-primary" onclick="popup()">Hobbies</button>
-
-
+  <main class="container">
+    <H1 id="greeting">Test</H1>
   </main>
 
 
