--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 
 
-<main class="container">
+  <main class="container">
     <div class="row">
-        <section class="col-md-12">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1 id="greeting"></h1>
-                    <ul id="groceryList">
-                      
-                        <li id="groceryItem">
-
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <label for="getGroceryItem">Add onto your groceries:</label>
-                    <input type="text" id="getGroceryItem">
-                    <button type="submit" onclick="" class="btn">Submit
-                    </button>
-                </div>
-            </div>
-        </section>
+      <section class="col-md-12">
+        <div class="row">
+          <div class="col-md-6">
+            <h1 id="greeting"></h1>
+            <ul id="groceryList">
+              <li id="groceryItem1"></li>
+              <li id="groceryItem2"></li>
+              <li id="groceryItem3"></li>
+              <li id="groceryItem4"></li>
+              <li id="groceryItem5"></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <label for="getGroceryItem">Add onto your groceries:</label>
+            <input type="text" id="getGroceryItem">
+            <button type="submit" onclick="addToList()" class="btn">Submit
+            </button>
+          </div>
+        </div>
+      </section>
     </div>
-</main>
+  </main>
 
   <script src="js/main.js" charset="utf-8"></script>
 </body>
+
 </html>
