Takehome day 5 - Form -> array - Form output

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
               <li id="groceryItem3"></li>
               <li id="groceryItem4"></li>
               <li id="groceryItem5"></li>
+              <li id="groceryItem6"></li>
+              <li id="groceryItem7"></li>
+              <li id="groceryItem8"></li>
+              <li id="groceryItem9"></li>
+              <li id="groceryItem10"></li>
+              <li id="groceryItem11"></li>
             </ul>
           </div>
           <div class="col-md-6">
