--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <main>
 
 
+    
+    <h1 id="greeting">Fahrenheit / Celcius Converter</h1>
+  <input id="degreeInput" placeholder="Enter Degree"></input>
+  <button class="selectionFahrenheit">Fahrenheit</button>
+  <button class="selectionCelcius" >Celcius</button>
+  
+  <input disabled="disabled" id="degreeOutput"></input>
+
   </main>
 
 
