--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-
+<main>
     
   <h1 id="greeting">Degree Converter</h1>
   <input id="degreeInput" placeholder="Enter Degrees"></input>
