--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +8,16 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-
 </head>
-
 <body>
-
-<main>
-    
-  <h1 id="greeting">Degree Converter</h1>
-  <input id="degreeInput" placeholder="Enter Degrees"></input>
-  <button id="selectionFahrenheit">Fahrenheit -> Celcius</button>
-  <button id="selectionCelcius" >Celcius -> Fahrenheit</button>
-  
-  <input disabled="disabled" id="degreeOutput"></input>
-  <h3 id="errormessage"></h3>
-
+  <main>
+    <h1 id="greeting">Degree Converter</h1>
+    <input id="degreeInput" placeholder="Enter Degrees"></input>
+    <button class="select" id="selectionFahrenheit">Fahrenheit -> Celcius</button>
+    <button class="select" id="selectionCelcius">Celcius -> Fahrenheit</button>
+    <input disable="disable"  disabled id="degreeOutput">
+    <h3 id="errormessage"></h3>
   </main>
-
   <script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
-
-
