--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 </head>
 <body>
 
-  <main>
+<!-- <div id="contain"class="container">
+  <h1 class="text-center text-uppercase">Welcome!</h1>
+</div> -->
 
 
-  </main>
 
-
+<div class="container">
+  
+</div>
 
   <script src="js/main.js" charset="utf-8"></script>
 </body>
